// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`F0Checkbox Snapshots renders checked 1`] = `
<View
  accessibilityLabel="Option"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="overflow-hidden"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    className="absolute inset-0"
    pointerEvents="none"
    style={
      [
        {
          "opacity": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 1)",
        },
      ]
    }
  />
  <View
    className="flex-row items-center gap-2"
  >
    <View
      className="w-6 h-6 rounded-sm items-center justify-center border border-solid overflow-hidden bg-f0-background-selected-bold border-f0-border-selected-bold"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="100%"
        bbWidth="100%"
        className="shrink-0 w-4 h-4 stroke-sm text-f0-icon-inverse"
        fill="none"
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {},
            ],
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M17.587 6.955a.9.9 0 0 1 1.273 1.273l-8.816 8.816a1 1 0 0 1-.141.115.9.9 0 0 1-1.132-.115l-3.63-3.63a.9.9 0 0 1 1.272-1.273l2.994 2.993z"
            fill={
              {
                "type": 2,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <Text
      className="no-underline normal-case tracking-normal text-[14px] leading-[20px] font-normal text-f0-foreground text-left"
    >
      Option
    </Text>
  </View>
</View>
`;

exports[`F0Checkbox Snapshots renders disabled 1`] = `
<View
  accessibilityLabel="Option"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="overflow-hidden"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    className="absolute inset-0"
    pointerEvents="none"
    style={
      [
        {
          "opacity": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 1)",
        },
      ]
    }
  />
  <View
    className="flex-row items-center gap-2"
  >
    <View
      className="w-6 h-6 rounded-sm items-center justify-center border border-solid overflow-hidden bg-f0-background border-f0-border opacity-50"
    />
    <Text
      className="no-underline normal-case tracking-normal text-[14px] leading-[20px] font-normal text-f0-foreground-secondary text-left"
    >
      Option
    </Text>
  </View>
</View>
`;

exports[`F0Checkbox Snapshots renders indeterminate 1`] = `
<View
  accessibilityLabel="Option"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": "mixed",
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="overflow-hidden"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    className="absolute inset-0"
    pointerEvents="none"
    style={
      [
        {
          "opacity": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 1)",
        },
      ]
    }
  />
  <View
    className="flex-row items-center gap-2"
  >
    <View
      className="w-6 h-6 rounded-sm items-center justify-center border border-solid overflow-hidden bg-f0-background-selected-bold border-f0-border-selected-bold"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="100%"
        bbWidth="100%"
        className="shrink-0 w-4 h-4 stroke-sm text-f0-icon-inverse"
        fill="none"
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {},
            ],
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M18.5 11.1a.9.9 0 0 1 0 1.8h-13a.9.9 0 1 1 0-1.8z"
            fill={
              {
                "type": 2,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <Text
      className="no-underline normal-case tracking-normal text-[14px] leading-[20px] font-normal text-f0-foreground text-left"
    >
      Option
    </Text>
  </View>
</View>
`;

exports[`F0Checkbox Snapshots renders unchecked 1`] = `
<View
  accessibilityLabel="Option"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": false,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="overflow-hidden"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    className="absolute inset-0"
    pointerEvents="none"
    style={
      [
        {
          "opacity": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 1)",
        },
      ]
    }
  />
  <View
    className="flex-row items-center gap-2"
  >
    <View
      className="w-6 h-6 rounded-sm items-center justify-center border border-solid overflow-hidden bg-f0-background border-f0-border"
    />
    <Text
      className="no-underline normal-case tracking-normal text-[14px] leading-[20px] font-normal text-f0-foreground text-left"
    >
      Option
    </Text>
  </View>
</View>
`;

exports[`F0Checkbox Snapshots renders with hideLabel 1`] = `
<View
  accessibilityLabel="Hidden label"
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": true,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="overflow-hidden"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <View
    className="absolute inset-0"
    pointerEvents="none"
    style={
      [
        {
          "opacity": 0,
        },
        {
          "backgroundColor": "rgba(0, 0, 0, 1)",
        },
      ]
    }
  />
  <View
    className="flex-row items-center gap-2"
  >
    <View
      className="w-6 h-6 rounded-sm items-center justify-center border border-solid overflow-hidden bg-f0-background-selected-bold border-f0-border-selected-bold"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="100%"
        bbWidth="100%"
        className="shrink-0 w-4 h-4 stroke-sm text-f0-icon-inverse"
        fill="none"
        focusable={false}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            [
              {},
            ],
            {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M17.587 6.955a.9.9 0 0 1 1.273 1.273l-8.816 8.816a1 1 0 0 1-.141.115.9.9 0 0 1-1.132-.115l-3.63-3.63a.9.9 0 0 1 1.272-1.273l2.994 2.993z"
            fill={
              {
                "type": 2,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
